# ModelGate

./: .gitignore  Agent.md  NOTICE.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx  api.ts  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: ccswitch_export.rs  ccswitch_import.rs  credential_store.rs  lib.rs  main.rs  offline_config.rs  ratio_login.rs  server_process.rs
desktop/src/i18n/: i18n.tsx
docs/: ccswitch-config-snapshot-study.md  ccswitch-openai-official-study.md  ccswitch-provider-auth-study.md  ccswitch-routing-backend-study.md  ccswitch-study.md  ccswitch-ui-code-reuse.md  ccswitch-ui-layout-study.md  ccswitch-ui-reuse-study.md  ccswitch-ui-study.md  ratio-source-study.md  server-startup-root-cause.md  startup-env-root-cause.md
examples/: modelgate.config.yaml
scripts/: prepare-desktop-server.mjs  prepare-release.mjs  smoke-ccswitch-snapshot.ts  smoke-missing-env.ts  smoke-ratio-sources.ts  smoke-usage-costs.ts
src/: cli.ts  index.ts  serverMain.ts
src/cli/: client.ts
src/config/: ccswitchSnapshot.ts  configManager.ts  env.ts  loadConfig.ts  providerPresets.ts  schema.ts
src/integrations/: ccswitchLink.ts
src/providers/: openaiCompatible.ts  types.ts
src/ratio-sources/: http.ts  ratioSourceManager.ts  ratioSourceStore.ts  registry.ts  types.ts
src/router/: adminRouter.ts  modelRouter.ts
src/runtime/: diagnostics.ts  ratioRefreshScheduler.ts  requestLog.ts  state.ts  usageStore.ts
src/server/: createServer.ts
src/utils/: logger.ts
(+46 files in other folders)
