[package]
name = "modelgate-desktop"
version = "0.1.0"
description = "ModelGate desktop management interface"
authors = ["Hzq-0304"]
edition = "2021"

[lib]
name = "modelgate_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
