[package]
name = "modelgate-desktop"
version = "0.2.0-rc.1"
description = "ModelGate desktop management interface"
authors = ["Hzq-0304"]
edition = "2021"

[lib]
name = "modelgate_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
